rag-llm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: rag-llm-ollama-svc
  name: rag-llm-ollama-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 7860 
  selector:
    k8s-app: rag-llm-ollama
  type: ClusterIP
