rag-llm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: rag-llm-ollama-ingress
spec:
  rules:
  - host: sdsu-student-survey-llm.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: rag-llm-ollama-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sdsu-student-survey-llm.nrp-nautilus.io
